--- a/src/pages/Services.css
+++ b/src/pages/Services.css
@@ -13,7 +13,7 @@
   overflow: hidden;
 
   /* Background Image - REPLACE with professional image */
-  background-image: url('https://images.unsplash.com/photo-1454165804606-c3d57bc86b40?w=1920');
+  background-image: url('src/assets/services-hero-section.jpg');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
