--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -72,7 +72,7 @@
   margin-bottom: 1.5rem;
   line-height: 1.2;
   font-weight: 800;
-  /* color: rgba(83, 153, 233, 0.9); */
+  color: rgba(146, 193, 247, 0.9);
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
 }
 
