--- a/src/pages/Services.css
+++ b/src/pages/Services.css
@@ -50,6 +50,7 @@
   font-size: 3.5rem;
   margin-bottom: 1rem;
   font-weight: 800;
+  color: rgba(146, 193, 247, 0.9);
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
 }
 
